--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro"
+import { Button } from "../components/Button"
 import Form from "../components/Form"
 ---
 
@@ -7,6 +8,7 @@ import Form from "../components/Form"
   <main class="flex justify-center flex-col items-center">
     <h1>Draft.ia</h1>
     <Form client:load />
+    <!-- <Button client:load>click me!</Button> -->
   </main>
 </Layout>
 
