Add clipboard btn html and styles

--- a/src/css/Draft.css
+++ b/src/css/Draft.css
@@ -6,6 +6,12 @@
   margin: 1rem;
 }
 
+.prompt {
+  max-width: 23rem;
+  max-height: 16rem;
+  overflow: auto;
+}
+
 .container {
   display: flex;
   justify-content: center;
