--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,12 +31,18 @@ const { title } = Astro.props
       white 60%
     );
   }
+
+  @font-face {
+    font-family: "Mona Sans";
+    src: url("Mona-Sans.woff") format("woff");
+  }
   html {
-    font-family: system-ui, sans-serif;
+    font-family: "Mona Sans", "Arial Narrow", Arial, sans-serif;
     background-color: #f6f6f6;
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+    /* font-family: "Hubot Sans"; */
   }
 </style>
