Fix bug font Mona Sans navbar

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Navbar from "../components/Navbar.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="About">
+<Layout title="about">
   <Navbar />
   <main class="grid place-content-center">
     <h2 class="text-4xl">about</h2>
