custom scrollbar draft and styles form

--- a/src/css/Draft.css
+++ b/src/css/Draft.css
@@ -15,6 +15,22 @@
   max-height: 16rem;
   max-width: 60ch;
   overflow: auto;
+  padding: 0.4rem;
+  border-radius: 1rem;
+}
+
+.draft::-webkit-scrollbar {
+  width: 16px;
+}
+
+.draft::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+.draft::-webkit-scrollbar-thumb {
+  background-color: #52cafd;
+  border-radius: 100px;
 }
 
 .container {
