Add theme dark and buttons to switch theme

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -23,10 +23,14 @@ const links: Link[] = [
 ---
 
 <nav
-  class="bg-white border-gray-200 px-2 py-4 mb-2 rounded xl:w-full dark:bg-gray-900 navbar"
+  class="bg-white border-gray-200 px-2 py-4 xl:w-full dark:bg-gray-900 navbar"
 >
   <div class="flex flex-wrap items-center justify-around mx-auto">
-    <a href="/" class="flex items-center hover:text-teal-500">
+    <a
+      href="/"
+      id="d"
+      class="flex items-center text-dark dark:text-white dark:hover:text-teal-500 hover:text-teal-500"
+    >
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="3em"
@@ -64,11 +68,12 @@ const links: Link[] = [
           clip-rule="evenodd"></path></svg
       >
     </button>
+
     <div
       class="hidden mobile-menu w-full md:flex md:items-center md:w-auto justify-center align-middle"
       id="menu"
     >
-      <uljjj
+      <ul
         class="text-base flex items-center flex-col text-gray-700 pt-4 md:flex md:justify-between md:pt-0"
       >
         {
@@ -83,7 +88,7 @@ const links: Link[] = [
             </li>
           ))
         }
-      </uljjj>
+      </ul>
     </div>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul
@@ -101,29 +106,93 @@ const links: Link[] = [
             </li>
           ))
         }
+
         <!-- <button> Login</button> -->
+        <button class="theme dark:text-white">
+          <svg
+            class="hidden"
+            id="button-light"
+            xmlns="http://www.w3.org/2000/svg"
+            width="2em"
+            height="2em"
+            viewBox="0 0 256 256"
+            ><circle cx="128" cy="128" r="60" fill="currentColor" opacity=".2"
+            ></circle><path
+              fill="currentColor"
+              d="M128 60a68 68 0 1 0 68 68a68.1 68.1 0 0 0-68-68Zm0 120a52 52 0 1 1 52-52a52 52 0 0 1-52 52Zm-8-144V16a8 8 0 0 1 16 0v20a8 8 0 0 1-16 0ZM43.1 54.5a8.1 8.1 0 1 1 11.4-11.4l14.1 14.2a8 8 0 0 1 0 11.3a8.1 8.1 0 0 1-11.3 0ZM36 136H16a8 8 0 0 1 0-16h20a8 8 0 0 1 0 16Zm32.6 51.4a8 8 0 0 1 0 11.3l-14.1 14.2a8.3 8.3 0 0 1-5.7 2.3a8.5 8.5 0 0 1-5.7-2.3a8.1 8.1 0 0 1 0-11.4l14.2-14.1a8 8 0 0 1 11.3 0ZM136 220v20a8 8 0 0 1-16 0v-20a8 8 0 0 1 16 0Zm76.9-18.5a8.1 8.1 0 0 1 0 11.4a8.5 8.5 0 0 1-5.7 2.3a8.3 8.3 0 0 1-5.7-2.3l-14.1-14.2a8 8 0 0 1 11.3-11.3ZM248 128a8 8 0 0 1-8 8h-20a8 8 0 0 1 0-16h20a8 8 0 0 1 8 8Zm-60.6-59.4a8 8 0 0 1 0-11.3l14.1-14.2a8.1 8.1 0 0 1 11.4 11.4l-14.2 14.1a8.1 8.1 0 0 1-11.3 0Z"
+            ></path></svg
+          >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="hidden"
+            id="button-dark"
+            width="2em"
+            height="2em"
+            viewBox="0 0 256 256"
+            ><path
+              fill="currentColor"
+              d="M216.7 152.6A91.9 91.9 0 0 1 103.4 39.3a92 92 0 1 0 113.3 113.3Z"
+              opacity=".2"></path><path
+              fill="currentColor"
+              d="M224.3 150.3a8.1 8.1 0 0 0-7.8-5.7l-2.2.4A84 84 0 0 1 111 41.6a5.7 5.7 0 0 0 .3-1.8a7.9 7.9 0 0 0-10.3-8.1a100 100 0 1 0 123.3 123.2a7.2 7.2 0 0 0 0-4.6ZM128 212A84 84 0 0 1 92.8 51.7a99.9 99.9 0 0 0 111.5 111.5A84.4 84.4 0 0 1 128 212Z"
+            ></path></svg
+          >
+        </button>
       </ul>
     </div>
   </div>
-</nav>
 
-<style>
-  li {
-    list-style: none;
-  }
-
-  @media (min-width: 765px) {
-    .mobile-menu {
-      display: none;
+  <style>
+    li {
+      list-style: none;
     }
-  }
-</style>
 
-<script>
-  const btnNav = document.querySelector(".nav-burger")
-  const menu = document.querySelector(".mobile-menu")
+    @media (min-width: 765px) {
+      .mobile-menu {
+        display: none;
+      }
+    }
+  </style>
 
-  btnNav.addEventListener("click", () => {
-    menu.classList.toggle("hidden")
-  })
-</script>
+  <script>
+    const btnNav = document.querySelector(".nav-burger")
+    const menu = document.querySelector(".mobile-menu")
+    const btnTheme = document.querySelector(".theme")
+    const btnDark = document.getElementById("button-dark")
+    const btnLight = document.getElementById("button-light")
+
+    btnNav.addEventListener("click", () => {
+      menu.classList.toggle("hidden")
+    })
+
+    btnTheme.addEventListener("click", () => {
+      if (localStorage.getItem("color-theme")) {
+        if (localStorage.getItem("color-theme") === "light") {
+          btnLight.classList.toggle("hidden")
+          btnDark.classList.toggle("hidden")
+          document.documentElement.style.backgroundColor = "#1e293b"
+          document.documentElement.style.setProperty("--bg-color", "#1e293b")
+          document.documentElement.classList.add("dark")
+          localStorage.setItem("color-theme", "dark")
+        } else {
+          document.documentElement.classList.remove("dark")
+          document.documentElement.style.backgroundColor = "#f6f6f6"
+          document.documentElement.style.setProperty("--bg-color", "#f6f6f6")
+          btnLight.classList.toggle("hidden")
+          btnDark.classList.toggle("hidden")
+          localStorage.setItem("color-theme", "light")
+        }
+
+        // if NOT set via local storage previously
+      } else {
+        if (document.documentElement.classList.contains("dark")) {
+          document.documentElement.classList.remove("dark")
+          localStorage.setItem("color-theme", "light")
+        } else {
+          document.documentElement.classList.add("dark")
+          localStorage.setItem("color-theme", "dark")
+        }
+      }
+    })
+  </script>
+</nav>
