--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro"
 
 <Layout title="about">
   <Navbar />
-  <main class="grid place-content-center">
+  <main class="grid place-content-center dark:text-white">
     <h2 class="text-4xl">about</h2>
   </main>
 </Layout>
