--- a/src/pages/landing.astro
+++ b/src/pages/landing.astro
@@ -6,7 +6,7 @@ const title = "Landing Page"
 
 <Layout title="Draft.ia">
   <Navbar />
-  <main class="grid place-content-center">
+  <main class="grid place-content-center dark:text-white">
     <h1 class="text-4xl">{title}</h1>
   </main>
 </Layout>
