Fix font Mona Sans 404

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title } = Astro.props
 
   @font-face {
     font-family: "Mona Sans";
-    src: url("Mona-Sans.woff") format("woff");
+    src: url("/fonts/Mona-Sans.woff") format("woff");
   }
   html {
     font-family: "Mona Sans", "Arial Narrow", Arial, sans-serif;
