--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,37 +25,37 @@ const links: Link[] = [
 <nav
   class="bg-white border-gray-200 px-2 py-4 xl:w-full dark:bg-gray-900 navbar"
 >
-  <div class="flex flex-wrap items-center justify-around nav-mobile mx-auto">
-    <a
-      href="/"
-      id="d"
-      class="flex items-center text-dark dark:text-white dark:hover:text-teal-500 hover:text-teal-500"
-    >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="3em"
-        height="3em"
-        viewBox="0 0 32 32"
-        ><path
-          fill="currentColor"
-          d="M8 6h12v2H8zm0 4h12v2H8zm0 4h6v2H8zm0 10h4v2H8z"></path><path
-          fill="currentColor"
-          d="m29.707 19.293l-3-3a1 1 0 0 0-1.414 0L16 25.586V30h4.414l9.293-9.293a1 1 0 0 0 0-1.414zM19.586 28H18v-1.586l5-5L24.586 23zM26 21.586L24.414 20L26 18.414L27.586 20zM12 30H6a2.002 2.002 0 0 1-2-2V4a2.002 2.002 0 0 1 2-2h16a2.002 2.002 0 0 1 2 2v10h-2V4H6v24h6z"
-        ></path></svg
+  <div class="flex flex-wrap items-center nav-mobile mx-auto">
+    <div class="flex flex-row gap-4">
+      <a
+        href="/"
+        id="d"
+        class="flex items-center text-dark dark:text-white dark:hover:text-teal-500 hover:text-teal-500"
       >
-      <span
-        class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-        >Draft.ia</span
-      >
-    </a>
-    <div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="3em"
+          height="3em"
+          viewBox="0 0 32 32"
+          ><path
+            fill="currentColor"
+            d="M8 6h12v2H8zm0 4h12v2H8zm0 4h6v2H8zm0 10h4v2H8z"></path><path
+            fill="currentColor"
+            d="m29.707 19.293l-3-3a1 1 0 0 0-1.414 0L16 25.586V30h4.414l9.293-9.293a1 1 0 0 0 0-1.414zM19.586 28H18v-1.586l5-5L24.586 23zM26 21.586L24.414 20L26 18.414L27.586 20zM12 30H6a2.002 2.002 0 0 1-2-2V4a2.002 2.002 0 0 1 2-2h16a2.002 2.002 0 0 1 2 2v10h-2V4H6v24h6z"
+          ></path></svg
+        >
+        <span
+          class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
+          >Draft.ia</span
+        >
+      </a>
       <button class="theme dark:text-white">
         <svg
           class="hidden"
           id="button-light"
           xmlns="http://www.w3.org/2000/svg"
-          width="1.5em"
-          height="1.5em"
+          width="2em"
+          height="2em"
           viewBox="0 0 256 256"
           ><circle cx="128" cy="128" r="60" fill="currentColor" opacity=".2"
           ></circle><path
@@ -67,8 +67,8 @@ const links: Link[] = [
           xmlns="http://www.w3.org/2000/svg"
           class="hidden"
           id="button-dark"
-          width="1.5em"
-          height="1.5em"
+          width="2em"
+          height="2em"
           viewBox="0 0 256 256"
           ><path
             fill="currentColor"
@@ -79,7 +79,8 @@ const links: Link[] = [
           ></path></svg
         >
       </button>
-
+    </div>
+    <div class="mobile-theme">
       <button
         data-collapse-toggle="navbar-default"
         type="button"
@@ -139,38 +140,6 @@ const links: Link[] = [
             </li>
           ))
         }
-
-        <!-- <button> Login</button> -->
-        <button class="theme dark:text-white">
-          <svg
-            class="hidden"
-            id="button-light"
-            xmlns="http://www.w3.org/2000/svg"
-            width="2em"
-            height="2em"
-            viewBox="0 0 256 256"
-            ><circle cx="128" cy="128" r="60" fill="currentColor" opacity=".2"
-            ></circle><path
-              fill="currentColor"
-              d="M128 60a68 68 0 1 0 68 68a68.1 68.1 0 0 0-68-68Zm0 120a52 52 0 1 1 52-52a52 52 0 0 1-52 52Zm-8-144V16a8 8 0 0 1 16 0v20a8 8 0 0 1-16 0ZM43.1 54.5a8.1 8.1 0 1 1 11.4-11.4l14.1 14.2a8 8 0 0 1 0 11.3a8.1 8.1 0 0 1-11.3 0ZM36 136H16a8 8 0 0 1 0-16h20a8 8 0 0 1 0 16Zm32.6 51.4a8 8 0 0 1 0 11.3l-14.1 14.2a8.3 8.3 0 0 1-5.7 2.3a8.5 8.5 0 0 1-5.7-2.3a8.1 8.1 0 0 1 0-11.4l14.2-14.1a8 8 0 0 1 11.3 0ZM136 220v20a8 8 0 0 1-16 0v-20a8 8 0 0 1 16 0Zm76.9-18.5a8.1 8.1 0 0 1 0 11.4a8.5 8.5 0 0 1-5.7 2.3a8.3 8.3 0 0 1-5.7-2.3l-14.1-14.2a8 8 0 0 1 11.3-11.3ZM248 128a8 8 0 0 1-8 8h-20a8 8 0 0 1 0-16h20a8 8 0 0 1 8 8Zm-60.6-59.4a8 8 0 0 1 0-11.3l14.1-14.2a8.1 8.1 0 0 1 11.4 11.4l-14.2 14.1a8.1 8.1 0 0 1-11.3 0Z"
-            ></path></svg
-          >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="hidden"
-            id="button-dark"
-            width="2em"
-            height="2em"
-            viewBox="0 0 256 256"
-            ><path
-              fill="currentColor"
-              d="M216.7 152.6A91.9 91.9 0 0 1 103.4 39.3a92 92 0 1 0 113.3 113.3Z"
-              opacity=".2"></path><path
-              fill="currentColor"
-              d="M224.3 150.3a8.1 8.1 0 0 0-7.8-5.7l-2.2.4A84 84 0 0 1 111 41.6a5.7 5.7 0 0 0 .3-1.8a7.9 7.9 0 0 0-10.3-8.1a100 100 0 1 0 123.3 123.2a7.2 7.2 0 0 0 0-4.6ZM128 212A84 84 0 0 1 92.8 51.7a99.9 99.9 0 0 0 111.5 111.5A84.4 84.4 0 0 1 128 212Z"
-            ></path></svg
-          >
-        </button>
       </ul>
     </div>
   </div>
@@ -182,6 +151,7 @@ const links: Link[] = [
 
     @media (max-width: 765px) {
       .nav-mobile {
+        display: flex;
         justify-content: space-between;
       }
     }
@@ -189,6 +159,13 @@ const links: Link[] = [
     @media (min-width: 765px) {
       .mobile-menu {
         display: none;
+      }
+      .mobile-theme {
+        display: none;
+      }
+
+      .nav-mobile {
+        justify-content: space-around;
       }
     }
   </style>
@@ -199,6 +176,9 @@ const links: Link[] = [
     const btnTheme = document.querySelector(".theme")
     const btnDark = document.getElementById("button-dark")
     const btnLight = document.getElementById("button-light")
+
+    btnDark.classList.toggle("hidden")
+    btnLight.classList.toggle("hidden")
 
     btnNav.addEventListener("click", () => {
       menu.classList.toggle("hidden")
