--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,7 +30,7 @@ const links: Link[] = [
       <a
         href="/"
         id="d"
-        class="flex items-center text-dark dark:text-white dark:hover:text-teal-500 hover:text-teal-500"
+        class="flex items-center text-dark dark:text-white dark:hover:text-blue-500 hover:text-blue-500"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -49,7 +49,9 @@ const links: Link[] = [
           >Draft.ia</span
         >
       </a>
-      <button class="theme dark:text-white">
+      <button
+        class="theme dark:text-white hover:text-blue-500 dark:hover:text-blue-500 transition-all"
+      >
         <svg
           class="hidden"
           id="button-light"
