--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -13,7 +13,8 @@
 }
 
 .btn-edit {
-  width: var(--btn-width);
+  /* width: var(--btn-width); */
+  width: 5em;
 }
 
 .activated:hover {
@@ -37,6 +38,22 @@
 @media (max-width: 415px) {
   :root {
     --send-width: 15em
+  }
+
+  .btn-edit {
+    width: var(--send-width);
+    margin: 1rem;
+  }
+
+  .btns-layout {
+    margin: 0;
+    flex-direction: column;
+  }
+
+  .btn-counter {
+    margin: 0;
+    margin-top: 2;
+    width: 2.4rem;
   }
 
   .form {
