--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from "../components/Footer.astro"
+
 export interface Props {
   title: string
 }
@@ -18,6 +20,7 @@ const { title } = Astro.props
   </head>
   <body>
     <slot />
+    <Footer />
   </body>
 </html>
 
