--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Icon from "astro-icon"
 
 <Layout title="Draft.ia">
   <Navbar />
-  <main class="grid place-content-center dark:text-white mt-8">
+  <main class="grid place-content-center text-black dark:text-white mt-8">
     <div class="flex justify-center content-around mobile-layout">
       <div class="font-bold">
         <h2 class="title text-6xl">Draft any topic</h2>
