Fix footer mobile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,16 +2,6 @@
   class="flex footer bottom-0 justify-around bg-white dark:text-white border-gray-200 px-2 py-4 w-full dark:bg-gray-900 mobile-lay"
 >
   <a
-    href="https://cohere.ai/"
-    class="text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent hover-underline-animation md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-    >Co:here api</a
-  >
-  <a
-    href="https://github.com/midudev/midu-cohere-hackathon"
-    class="text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent hover-underline-animation md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-    >Midudev's Hackathon</a
-  >
-  <a
     class="text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent hover-underline-animation md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
     href="https://github.com/Atticus64">Developed by Jonathan 🐢</a
   >
@@ -59,11 +49,11 @@
   }
 
   @media (max-width: 530px) {
-    .mobile-lay {
+    /* .mobile-lay {
       display: flex;
       align-items: center;
       flex-direction: column;
-    }
+    } */
 
     a {
       margin-top: 1rem;
