--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,6 +47,9 @@ const { title } = Astro.props
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
   }
+
+  @media (min-width: 765px) {
+  }
 </style>
 
 <script>
