Add more description in features

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,10 +66,10 @@ import Icon from "astro-icon"
         <li
           class="ml-2 mt-6 dark:feature-item dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
         >
-          <div class="ml-9 text-cyan-400 w-20">
+          <div class="ml-20 text-cyan-400 w-20">
             <Icon name="ph:lightning-duotone" />
           </div>
-          Generate up to 5 drafts
+          Generate up to 5 drafts in same time
         </li>
       </ul>
     </section>
