Fix minor problems

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,8 +9,12 @@ import { Github } from "./icons/Github"
     class="text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent hover-underline-animation md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
     href="https://github.com/Atticus64">Developed by Jonathan 🐢</a
   >
-  <a href="https://github.com/Atticus64/draft.ia" class="hover:text-gray-400">
+  <a
+    href="https://github.com/Atticus64/draft.ia"
+    class="hover:text-gray-400 flex flex-row align-middle items-center"
+  >
     <Github />
+    Source Code
   </a>
 </footer>
 
