--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Icon from "astro-icon"
         </h2>
         <div class="mt-8 container-prev">
           <a
-            class="mt-4 p-4 rounded text-white text-4xl bg-cyan-500 hover:bg-blue-700 transition-all hover:scale-110 link-app"
+            class="mt-4 p-4 rounded text-white text-4xl bg-cyan-700 hover:bg-blue-700 transition-all hover:scale-110 link-app"
             href="/app"
           >
             Start Drafting</a
@@ -40,7 +40,7 @@ import Icon from "astro-icon"
       <h4 class="text-3xl font-semibold mt-2">Features</h4>
       <ul class="flex align-middle features-list">
         <li
-          class="mt-4 p-2 dark:feature-item dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
+          class="mt-4 p-2 dark:feature-item transition-all dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
         >
           <div class="text-cyan-400 w-20">
             <Icon name="carbon:tool-kit" />
@@ -48,7 +48,7 @@ import Icon from "astro-icon"
           Easy to use
         </li>
         <li
-          class="ml-2 mt-4 p-2 dark:feature-item dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
+          class="ml-2 mt-4 p-2 dark:feature-item transition-all dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
         >
           <div class="text-cyan-400 w-20">
             <Icon name="mdi:clipboard-file-outline" />
@@ -56,7 +56,7 @@ import Icon from "astro-icon"
           Copy the text
         </li>
         <li
-          class="ml-2 mt-4 dark:feature-item dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100 p-2"
+          class="ml-2 mt-4 dark:feature-item transition-all dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100 p-2"
         >
           <div class="text-cyan-400 w-20">
             <Icon name="ph:moon-stars-duotone" />
@@ -64,7 +64,7 @@ import Icon from "astro-icon"
           Dark theme
         </li>
         <li
-          class="ml-2 mt-6 dark:feature-item dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
+          class="ml-2 mt-6 dark:feature-item transition-all dark:feature-border dark:hover:bg-slate-600 hover:bg-blue-100"
         >
           <div class="ml-20 text-cyan-400 w-20">
             <Icon name="ph:lightning-duotone" />
