--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -35,6 +35,7 @@ const links: Link[] = [
         >
       </a>
       <button
+        name="theme selector"
         class="theme dark:text-white hover:text-blue-500 dark:hover:text-blue-500 transition-all"
       >
         <DarkMoon id="button-dark" />
