Add meta descriptions to seo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,26 @@ const { title } = Astro.props
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/hint.css" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="title"
+      content="Draft.ia generate drafts on the fly and easily"
+    />
+    <meta
+      property="og:title"
+      content="Draft.ia generate drafts on the fly and easily"
+    />
+    <meta
+      property="og:description"
+      content="Powerfull website to generate drafts of all topics in the world, for blogs, for investigations, learning"
+    />
+    <meta
+      name="description"
+      content="Powerfull website to generate drafts of all topics in the world, for blogs, for investigations, learning"
+    />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/KvJTQX51/draft.png"
+    />
     <title>{title}</title>
   </head>
   <body class="text-black dark:text-white">
